# agent-wave

./: .fake-agent-codex-test-session.txt  .fake-agent-success-nosession.txt  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml  task.md
.codex/environments/: environment.toml
.cursor/rules/: agent-workflow-quality-gates.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
agvv/: __init__.py  cli.py  core.py  tasking.py
agvv/commands/: __init__.py  common.py  contracts.py  daemon.py  project.py  task.py
agvv/orchestration/: __init__.py  acp_ops.py  api.py  executor.py  git_ops.py  layout.py  models.py  pr_core.py  pr_workflow.py  tmux_ops.py  tmux_ops_deprecated.py
agvv/runtime/: __init__.py  adapters.py  api.py  core.py  dispatcher.py  models.py  ports.py  pr_lifecycle.py  prompting.py  session_lifecycle.py  spec.py  store.py  task_helpers.py
agvv/shared/: __init__.py  errors.py  pr.py
demo/repo.git/: config
docs/: architecture.md  cicd.md  cicd.zh-CN.md  cli.md  multi-agent-orchestration-spec.md  overview.md  task-template.md  workflow.md
docs/agvv-e2e-2026-03-30/: report.md
docs/design/: cli.md  (+3 more)
orch/: __init__.py  cli.py  core.py
scripts/: adopt_existing_project.sh  cleanup_feature.sh  init_project.sh  new_feature_worktree.sh
tests/: TESTLOOP.md  _support.py  conftest.py  test_cli.py  test_cli_output.py  test_core.py  test_daemon.py  test_feedback.py  test_project.py  test_real_agent_e2e.py  test_robustness.py  test_run.py  test_session.py  test_task.py  test_tasking.py  test_worktree.py
(+63 files in other folders)
