[project]
name = "agent-wave"
version = "0.1.0"
description = "Agent Wave: orchestrate parallel git worktree workflow for AI agents."
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[project.scripts]
agvv = "agvv.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agvv"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
